# Naked-v2

./: .gitignore  README.md  main.py  pyproject.toml
naked/core/: display.py  engine.py  eventBus.py  events.py  exceptions.py  plugin.py  registry.py
naked/intelligence/: rules.py  score.py
naked/models/: account.py  intelligence_score.py  profile.py  search.py  search_result.py  search_session.py
naked/models/profiles/: reddit.py
naked/providers/dummy/: provider.py
naked/providers/examples/dummy/: provider.py
naked/providers/github/: provider.py
naked/providers/reddit/: __init__.py  provider.py
tests/: test_error_handling.py  test_reddit_score.py  test_score_calculator.py
