[project]
name = "naked-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
